plugins {
    id 'com.gradle.plugin-publish' version '0.21.0'
    id 'java-gradle-plugin'
    id 'groovy'
    id 'jacoco'
    id 'signing'
    id 'net.researchgate.release' version '3.0.2'
    id 'ru.vyarus.quality' version '4.9.0'
    id 'io.github.gradle-nexus.publish-plugin' version '1.2.0'
    id 'ru.vyarus.java-lib' version '2.4.0'
    id 'ru.vyarus.github-info' version '1.5.0'
    id 'com.github.ben-manes.versions' version '0.46.0'
    id "pl.droidsonroids.jacoco.testkit" version "1.0.9"
}

// because of closure-stylesheets compiled for 11
sourceCompatibility = '11'

wrapper {
    gradleVersion = '7.6'
}

repositories { mavenLocal(); mavenCentral(); gradlePluginPortal() }
dependencies {
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'in.wilsonl.minifyhtml:minify-html:0.10.7'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-compress:1.22'
    implementation 'org.padler:closure-stylesheets:1.6.5'
    implementation 'com.google.javascript:closure-compiler:v20230103'

    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
}

group = 'ru.vyarus'
description = 'Optimize static resources for production'

github {
    user 'xvik'
    license 'MIT'
}

pom {
    developers {
        developer {
            id 'xvik'
            name 'Vyacheslav Rusakov'
            email 'vyarus@gmail.com'
        }
    }
}

nexusPublishing {
    repositories {
        sonatype {
            username = findProperty('sonatypeUser')
            password = findProperty('sonatypePassword')
        }
    }
}

// skip signing for jitpack (snapshots)
tasks.withType(Sign) {onlyIf { !System.getenv('JITPACK') }}

// Required signing properties for release: signing.keyId, signing.password and signing.secretKeyRingFile
// (https://docs.gradle.org/current/userguide/signing_plugin.html#sec:signatory_credentials)

javaLib {
    // don't publish gradle metadata artifact
    withoutGradleMetadata()
}


gradlePlugin {
    plugins {
        productionFrontendPlugin {
            id = 'ru.vyarus.prod-frontend'
            displayName = project.description
            implementationClass = 'ru.vyarus.gradle.frontend.ProdFrontendPlugin'
        }
    }
}
pluginBundle {
    description = 'Optimize static resources for production'
    tags = ['html', 'js', 'css', 'frontend', 'minify']

    mavenCoordinates {
        groupId = project.group
        artifactId = project.name
    }
}

// release.git.requireBranch.set('master')  // default is main

afterReleaseBuild {
    dependsOn = [
            'publishMavenPublicationToSonatypeRepository',
            'closeAndReleaseSonatypeStagingRepository',
            publishPlugins]
    doLast {
        logger.warn "RELEASED $project.group:$project.name:$project.version"
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events 'skipped', 'failed'
        exceptionFormat 'full'
    }
    maxHeapSize = '512m'
    doLast {
        sleep(1000)
    }
}

dependencyUpdates.revision = 'release'
